@@ -356,13 +356,58 @@ tree for a given model.
 
 Usage::
 
-    {% full_tree_for_model [model] as [varname] %}
+   {% full_tree_for_model [model] as [varname] %}
 
 The model is specified in ``[appname].[modelname]`` format.
 
 Example::
 
-    {% full_tree_for_model tests.Genre as genres %}
+   {% full_tree_for_model tests.Genre as genres %}
+
+drilldown_tree_for_node
+~~~~~~~~~~~~~~~~~~~~~~~
+
+Populates a template variable with the drilldown tree for a given node,
+optionally counting the number of items associated with its children.
+
+A drilldown tree consists of a node's ancestors, itself and its
+immediate children. For example, a drilldown tree for a book category
+"Personal Finance" might look something like::
+
+   Books
+      Business, Finance & Law
+         Personal Finance
+            Budgeting (220)
+            Financial Planning (670)
+
+Usage::
+
+   {% drilldown_tree_for_node [node] as [varname] %}
+
+Extended usage::
+
+   {% drilldown_tree_for_node [node] as [varname] count [foreign_key] in [count_attr] %}
+   {% drilldown_tree_for_node [node] as [varname] cumulative count [foreign_key] in [count_attr] %}
+
+The foreign key is specified in ``[appname].[modelname].[fieldname]``
+format, where ``fieldname`` is the name of a field in the specified
+model which relates it to the given node's model.
+
+When this form is used, a ``count_attr`` attribute on each child of the
+given node in the drilldown tree will contain a count of the number of
+items associated with it through the given foreign key.
+
+If cumulative is also specified, this count will be for items related to
+the child node and all of its descendants.
+
+Examples::
+
+   {% drilldown_tree_for_node genre as drilldown %}
+   {% drilldown_tree_for_node genre as drilldown count tests.Game.genre in game_count %}
+   {% drilldown_tree_for_node genre as drilldown cumulative count tests.Game.genre in game_count %}
+
+See `more template tag examples`_ for an example of how to render a
+drilldown tree as a nested list.
 
 Filter reference
 ----------------
@@ -389,10 +434,30 @@ representation of the tree.
 
 Example::
 
-   {% for genre,tree in genres|tree_info %}
-   {% if tree.new_level %}<ul><li>{% else %}</li><li>{% endif %}
+   {% for genre,structure in genres|tree_info %}
+   {% if structure.new_level %}<ul><li>{% else %}</li><li>{% endif %}
    {{ genre.name }}
-   {% for level in tree.closed_levels %}</li></ul>{% endfor %}
+   {% for level in structure.closed_levels %}</li></ul>{% endfor %}
+   {% endfor %}
+
+More template tag examples
+--------------------------
+
+An example of the ``drilldown_tree_for_node`` tag and the ``tree_info``
+filter being used together to render a drilldown menu for a node, with
+cumulative counts of related items being displayed for the node's
+children::
+
+   {% drilldown_tree_for_node genre as drilldown cumulative count tests.Game.genre in game_count %}
+   {% for node,structure in drilldown|tree_info %}
+      {% if structure.new_level %}<ul><li>{% else %}</li><li>{% endif %}
+      {% ifequal node genre %}
+      <strong>{{ node.name }}</strong>
+      {% else %}
+      <a href="{{ node.get_absolute_url }}">{{ node.name }}</a>
+      {% ifequal node.parent_id genre.pk %}({{ node.game_count }}){% endifequal %}
+      {% endifequal %}
+      {% for level in structure.closed_levels %}</li></ul>{% endfor %}
    {% endfor %}
 
 
